Attempts to fix alignment problem in issue #4. Won't close until I can actually test

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -158,12 +158,13 @@ header
     font-size 16px
     padding 6.222px 4.11px
   input    
-    margin-top 6.222px
+    margin 6.222px 0 3px 0
     padding 4px 2px
     width 140px
     float right
     font-family 'Molengo', Helvetica, Arial, sans-serif
   textarea
+    float right
     overflow-y hidden
     width 233px
     height 159.47px
